# trance

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  SUPPORT.md  build.rs  justfile  registry.json
assets/brand/: wsm.rc
src/: app.rs  config.rs  doctor.rs  downloader.rs  main.rs  preview.rs  theme.rs  ui.rs  win32.rs
src/app/: actions.rs  mod.rs
src/backend/: mod.rs  preview.rs  sys_info.rs
src/backend/downloader/: mod.rs  stub.rs
src/backend/saver/: stub.rs  win32.rs
src/ui/: mod.rs  utils.rs  widgets.rs
