[package]
name = "trance"
version = "2026.06.09"
edition = "2024"
rust-version = "1.85"
license = "MIT"
description = "TUI Windows screensaver manager"

[features]
default = ["downloader"]
downloader = ["dep:ureq", "dep:serde", "dep:serde_json"]

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
sysinfo = "0.30"
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
library = { git = "https://github.com/local76/library.git", branch = "main", features = ["widgets", "sys-info", "window", "clipboard", "notification", "event-log", "scenes"] }

[target.'cfg(windows)'.dependencies]
winreg = "0.52"
ureq = { version = "2.9", optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = { version = "1.0", optional = true }
windows-sys = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_System_Console",
    "Win32_System_Power",
    "Win32_System_Shutdown",
    "Win32_UI_Accessibility",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Graphics_Gdi",
    "Win32_UI_HiDpi",
    "Win32_System_Threading",
]}
windows = { version = "0.52.0", features = [
    "Data_Xml_Dom",
    "UI_Notifications",
] }

[build-dependencies]
winres = "0.1"

[package.metadata.deb]
maintainer = "Jeryd <jerydleuck@gmail.com>"
assets = [
    ["target/x86_64-unknown-linux-musl/release/trance-tui", "usr/bin/trance-tui", "755"],
    ["assets/brand/app_icon.png", "usr/share/pixmaps/trance-tui.png", "644"],
    ["packaging/desktop/trance-tui.desktop", "usr/share/applications/trance-tui.desktop", "644"],
]

[package.metadata.generate-rpm]
auto-req = "no"
assets = [
    { source = "target/x86_64-unknown-linux-musl/release/trance-tui", dest = "/usr/bin/trance-tui", mode = "755" },
    { source = "assets/brand/app_icon.png", dest = "/usr/share/pixmaps/trance-tui.png", mode = "644" },
    { source = "packaging/desktop/trance-tui.desktop", dest = "/usr/share/applications/trance-tui.desktop", mode = "644" }
]

[patch."https://github.com/local76/library.git"]
library = { path = "../library" }
